[project]
name = "unthrottle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mate Marjanović", email = "sharp.edged2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests[socks]>=2.32.3",
]

[project.scripts]
unthrottle = "unthrottle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
