[project]
name = "unthrottle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mate Marjanović", email = "sharp.edged2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx[socks]>=0.28.1",
    "playwright>=1.49.1",
    "prompt-toolkit>=3.0.48",
    "tqdm>=4.67.1",
]

[project.scripts]
unthrottle = "unthrottle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
